# tegra-sysinstall

./: Makefile.am  README.md  configure.ac
lib/: tools-common.in
src/: tegra-sysinstall-menu.in  tegra-sysinstall.in
